--- a/readme
+++ b/readme
@@ -11,5 +11,9 @@ http://www.computercraft.info/
 
 Source Repo:
 https://github.com/phaedryx/turtle-scripts
+
+Sample Session
+==============
+
 --]]
 
